Fix styling issues for react slick carousel. Also copy update
Cards weren't equal height when content wasn't the same. Have to override custom slick classes. Also shadow cutoff on slider.

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,18 @@
     @apply mx-auto px-16 sm:px-20 lg:px-24 xl:px-28;
   }
 }
+
+@layer components {
+  .testimonial-slider .slick-list {
+    @apply flex !important;
+  }
+
+  .testimonial-slider .slick-track {
+    @apply flex !important;
+    @apply p-2 !important; /* So the card shadow isn't cut off at the bottom */
+  }
+  .testimonial-slider .slick-slide > div {
+    @apply h-full;
+    @apply overflow-visible;
+  }
+}
